objects/Music_Usage__c/Music_Usage__c.object-meta.xml
<CustomObject>
    <description>This is Music Usage object.</description>
    <label>Music Usage</label>
    <nameField>
        <label>Music Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Music Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>