objects/Music_Usage__c/fields/Dummy_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Date_3__c</fullName>
    <description>This is Dummy field, can be use in subsriber org according to thier need.</description>
    <label>Dummy Date 3</label>
    <type>Date</type>
</CustomField>