objects/Music_Usage__c/fields/Dummy_Picklist_3__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Picklist_3__c</fullName>
    <description>This is Dummy field, can be use in subsriber org according to thier need.</description>
    <label>Dummy Picklist 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dummy 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>