objects/Music_Usage__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <description>This is Job field. Each Music Usage record will contain its related Job.</description>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Music Usages</relationshipLabel>
    <relationshipName>Music_Usages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>