objects/Music_Usage__c/fields/Music_Usage_Drop__c.field-meta.xml
<CustomField>
    <fullName>Music_Usage_Drop__c</fullName>
    <description>This is Music Usage Drop field.</description>
    <label>Music Usage Drop</label>
    <length>30</length>
    <type>Text</type>
</CustomField>