objects/Music_Usage__c/fields/Music_Usage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Music_Usage_End_Date__c</fullName>
    <description>This is Music Usage End Date field.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>