objects/Music_Usage__c/fields/Music_Usage_Library__c.field-meta.xml
<CustomField>
    <fullName>Music_Usage_Library__c</fullName>
    <description>This is Music Usage Library field.</description>
    <label>Library</label>
    <length>30</length>
    <type>Text</type>
</CustomField>