objects/Music_Usage__c/fields/Music_Usage_Note__c.field-meta.xml
<CustomField>
    <fullName>Music_Usage_Note__c</fullName>
    <description>This is Music Usage Note field.</description>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>