objects/Music_Usage__c/fields/Music_Usage_Promo_Length__c.field-meta.xml
<CustomField>
    <fullName>Music_Usage_Promo_Length__c</fullName>
    <label>Promo Length</label>
    <length>30</length>
    <type>Text</type>
</CustomField>