objects/Music_Usage__c/fields/Music_Usage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Music_Usage_Start_Date__c</fullName>
    <description>This is Music Usage Start Date field.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>