objects/Music_Usage__c/fields/Music_Usage_Track__c.field-meta.xml
<CustomField>
    <fullName>Music_Usage_Track__c</fullName>
    <description>This is Music Usage Track field.</description>
    <label>Track</label>
    <length>30</length>
    <type>Text</type>
</CustomField>