objects/Music_Usage__c/fields/Music_Usage_Track_Info__c.field-meta.xml
<CustomField>
    <fullName>Music_Usage_Track_Info__c</fullName>
    <description>This is Music Usage Track Info field.</description>
    <label>Track Info</label>
    <length>30</length>
    <type>Text</type>
</CustomField>