objects/Music_Usage__c/validationRules/Start_Date_must_be_less_than_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_must_be_less_than_End_Date</fullName>
    <active>true</active>
    <description>Music Usage Start Date must be less than Music Usage End Date.</description>
    <errorConditionFormula>Music_Usage_Start_Date__c  &gt;  Music_Usage_End_Date__c</errorConditionFormula>
    <errorDisplayField>Music_Usage_End_Date__c</errorDisplayField>
    <errorMessage>End Date must be greater than Start Date</errorMessage>
</ValidationRule>